syntax = "proto3";

package bigstar.product;

option go_package = "github.com/LinkedInLearning/beginner-s-guide-to-go-Proto-protocol-buffer-go-4378006/go/product";

option java_package = "com.example.bigstar.product.message";
option java_outer_classname = "ProductProto";
option java_multiple_files = true;

import "product/message.proto";

service ProductService {
  rpc GetProducts(AllProductsRequest) returns (AllProductsResponse);
  rpc GetProductById(GetProductRequest) returns (GetProductResponse);
  rpc ProductSearch(SearchRequest) returns (SearchResponse);
}